[package]
name = "ulule"
version = "0.0.0"
description = "API bindings for the Ulule v1 HTTP API"
readme = "README.md"
repository = "https://github.com/ulule/ulule-rs.git"
documentation = "https://docs.rs/ulule/"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
license = "MIT"

[lib]
name = "ulule"

[dependencies]
awc = { version = "0.2.1", features = ["ssl"]}
actix-rt = "0.2.2"
actix-http = "0.2.5"
serde = { version = "1.0.93", features =["derive"]}
serde_json = "1.0.39"
futures = "0.1.27"
