[package]
name = "ulule-client"
version = "0.1.1"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Client for the Ulule v1 HTTP API"
readme = "README.md"
repository = "https://github.com/ulule/ulule-rs.git"
documentation = "https://docs.rs/ulule-client/"
edition = "2018"
license = "MIT"


[dependencies]
awc = { version = "0.2.1", features = ["ssl"]}
actix-http = "0.2.5"
serde = { version = "1.0.93", features =["derive"]}
serde_json = "1.0.39"
futures = "0.1.27"
ulule = "1.0.0"


[dev-dependencies]
actix-rt = "0.2.2"
