[package]
name = "ulule-client"
version = "1.0.0"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Client for the Ulule v1 HTTP API"
readme = "README.md"
repository = "https://github.com/ulule/ulule-rs.git"
documentation = "https://docs.rs/ulule-client/"
edition = "2018"
license = "MIT"

[dependencies]
reqwest = { version= "0.10.0-alpha.1", features = ["json"]}
serde = { version = "1.0.93", features =["derive"]}
ulule = "1.0.0"

[dev-dependencies]
tokio = "0.2.0-alpha.6"
